force-app/main/default/objects/Warranty__c/Warranty__c.object-meta.xml
<CustomObject>
    <description>Represents a customer warranty associated with a Product. Each Warranty is a detail record of a Product (Master-Detail).</description>
    <label>Warranty</label>
    <pluralLabel>Warranties</pluralLabel>
    <nameField>
        <displayFormat>W-{00000}</displayFormat>
        <label>Warranty Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>