force-app/main/default/objects/Warranty__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the warranty is active. Only active warranties can be edited.</description>
    <inlineHelpText>Uncheck when the warranty is no longer active. Inactive warranties cannot be edited.</inlineHelpText>
</CustomField>