force-app/main/default/objects/Warranty__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Warranty expiration date, automatically calculated as the Start Date plus the Warranty Term in months.</description>
    <formula>ADDMONTHS(Start_Date__c, Warranty_Term_Months__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>