force-app/main/default/objects/Warranty__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>Formula that returns true when the warranty Status is Active. Used to gate editing of warranties.</description>
    <inlineHelpText>Automatically true when Status is Active.</inlineHelpText>
    <type>Checkbox</type>
    <formula>ISPICKVAL(Status__c, &quot;Active&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>