force-app/main/default/objects/Warranty__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>The current status of the warranty. Only Active warranties may be edited.</description>
    <inlineHelpText>Active, Expired, or Void. Only Active warranties can be edited.</inlineHelpText>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>