force-app/main/default/objects/Warranty__c/fields/Warranty_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Period_Months__c</fullName>
    <label>Warranty Period (Months)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
    <description>The duration of the warranty coverage in months.</description>
    <inlineHelpText>Enter the warranty duration in months.</inlineHelpText>
</CustomField>