force-app/main/default/objects/Warranty__c/listViews/All_Warranties.listView-meta.xml
<ListView>
    <fullName>All_Warranties</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Warranty_Period_Months__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Warranties</label>
</ListView>